plugins/binding/csharp/source/TellusimCSBase.cs

// Copyright (C) 2018-2026, Tellusim Technologies Inc. All rights reserved
// https://tellusim.com/

using System;
using System.Runtime.InteropServices;

/*
 */
namespace Tellusim {
	
	/*****************************************************************************\
	 *
	 * Base
	 *
	\*****************************************************************************/
	
	/*
	 */
	public static partial class Base {
		
		/// 8-bit integer constants
		public const sbyte Mini8 = -127 - 1;
		public const sbyte Maxi8 =  127;
		public const byte Maxu8 = 255;
		
		/// 16-bit integer constants
		public const short Mini16 = -32767 - 1;
		public const short Maxi16 =  32767;
		public const ushort Maxu16 = 65535;
		
		/// 32-bit integer constants
		public const int Mini32 = -2147483647 - 1;
		public const int Maxi32 =  2147483647;
		public const uint Maxu32 = 4294967295u;
		
		/// 64-bit integer constants
		public const long Mini64 = -9223372036854775807L - 1;
		public const long Maxi64 =  9223372036854775807L;
		public const ulong Maxu64 = 18446744073709551615uL;
		
		/// 16-bit floating point constants
		public const float Minf16 = 5.96046448e-08f;
		public const float Maxf16 = 65504.0f;
		
		/// 32-bit floating point constants
		public const float Minf32 = 1.17549435e-38f;
		public const float Maxf32 = 3.40282346e+38f;
		public const float Pi = 3.141592653589793f;
		public const float Pi2 = 6.283185307179586f;
		public const float Pi05 = 1.570796326794897f;
		public const float Sqrt2 = 1.4142135623730951f;
		public const float Deg2Rad = 0.017453292519943f;
		public const float Rad2Deg = 57.295779513082325f;
		
		/// 64-bit floating point constants
		public const double Minf64 = 2.22507385850720138e-308;
		public const double Maxf64 = 1.79769313486231571e+308;
		public const double Pid = 3.141592653589793115997963468544;
		public const double Pi2d = 6.283185307179586231995926937088;
		public const double Pi05d = 1.570796326794896557998981734272;
		public const double Sqrt2d = 1.414213562373095145474621858739;
		public const double Deg2Radd = 0.017453292519943295474371680598;
		public const double Rad2Degd = 57.295779513082322864647721871734;
		
		/// null handle
		public static HandleRef Null = new HandleRef(null, IntPtr.Zero);
		
		/// string utils
		internal static string[] getArgs(string[] args) {
			string[] ret = new string[args.Length + 1];
			for(uint i = 0; i < args.Length; i++) ret[i + 1] = args[i];
			ret[0] = "main";
			return ret;
		}
		
		internal static string getCString(IntPtr ptr) {
			if(ptr != IntPtr.Zero) {
				#if _WIN32
					return Marshal.PtrToStringAnsi(ptr);
				#else
					return Marshal.PtrToStringUTF8(ptr);
				#endif
			}
			return string.Empty;
		}
		
		internal static string getString(IntPtr self) {
			if(self != IntPtr.Zero) {
				#if _WIN32
					string ret = Marshal.PtrToStringAnsi(tsString_get_c(self), (int)tsString_size(self));
				#else
					string ret = Marshal.PtrToStringUTF8(tsString_get_c(self), (int)tsString_size(self));
				#endif
				tsString_delete(self);
				return ret;
			}
			return string.Empty;
		}
		
		/// array data
		internal static void setData<Type>(ref Type[] data, IntPtr ptr, int stride) {
			long address = ptr.ToInt64();
			for(int i = 0; i < data.Length; i++) {
				data[i] = Marshal.PtrToStructure<Type>(new IntPtr(address));
				address += stride;
			}
		}
		internal static void getData<Type>(Type[] data, IntPtr ptr, int stride) {
			long address = ptr.ToInt64();
			for(int i = 0; i < data.Length; i++) {
				Marshal.StructureToPtr(data[i], new IntPtr(address), false);
				address += stride;
			}
		}
		
		/// callback pointer
		internal static IntPtr getFunc(Delegate func) {
			if(func != null) return Marshal.GetFunctionPointerForDelegate(func);
			return IntPtr.Zero;
		}
		
		/// library name
		#if _WIN32
			#if TS_ARM64
				#if TS_DEBUG
					internal const string Import = "TellusimC_arm64d.dll";
				#else
					internal const string Import = "TellusimC_arm64.dll";
				#endif
			#else
				#if TS_DEBUG
					internal const string Import = "TellusimC_x64d.dll";
				#else
					internal const string Import = "TellusimC_x64.dll";
				#endif
			#endif
		#elif _LINUX
			#if TS_ARM64
				#if TS_DEBUG
					internal const string Import = "libTellusimC_arm64d.so";
				#else
					internal const string Import = "libTellusimC_arm64.so";
				#endif
			#else
				#if TS_DEBUG
					internal const string Import = "libTellusimC_x64d.so";
				#else
					internal const string Import = "libTellusimC_x64.so";
				#endif
			#endif
		#elif _MACOS
			#if TS_ARM64
				#if TS_DEBUG
					internal const string Import = "libTellusimC_arm64d.dylib";
				#else
					internal const string Import = "libTellusimC_arm64.dylib";
				#endif
			#else
				#if TS_DEBUG
					internal const string Import = "libTellusimC_x64d.dylib";
				#else
					internal const string Import = "libTellusimC_x64.dylib";
				#endif
			#endif
		#endif
		
		[DllImport(Import)] private static extern uint tsString_size(IntPtr self);
		[DllImport(Import)] private static extern IntPtr tsString_get_c(IntPtr self);
		[DllImport(Import)] private static extern void tsString_delete(IntPtr self);
	}
	
	/*****************************************************************************\
	 *
	 * Color
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Color {
		
		public Color(float c) { r = c; g = c; b = c; a = c; }
		public Color(float l, float a) { r = l; g = l; b = l; this.a = a; }
		public Color(float r, float g, float b, float a = 1.0f) { this.r = r; this.g = g; this.b = b; this.a = a; }
		public Color(in Color c) { r = c.r; g = c.g; b = c.b; a = c.a; }
		public Color(in float[] c) { r = c[0]; g = c[1]; b = c[2]; a = c[3]; }
		
		public static Color operator*(in Color c0, float c1) { Color ret = new Color(); tsColor_mul1(ref ret, in c0, c1); return ret; }
		public static Color operator/(in Color c0, float c1) { Color ret = new Color(); tsColor_div1(ref ret, in c0, c1); return ret; }
		public static Color operator+(in Color c0, float c1) { Color ret = new Color(); tsColor_add1(ref ret, in c0, c1); return ret; }
		public static Color operator-(in Color c0, float c1) { Color ret = new Color(); tsColor_sub1(ref ret, in c0, c1); return ret; }
		
		public static Color operator*(in Color c0, in Color c1) { Color ret = new Color(); tsColor_mul(ref ret, in c0, in c1); return ret; }
		public static Color operator/(in Color c0, in Color c1) { Color ret = new Color(); tsColor_div(ref ret, in c0, in c1); return ret; }
		public static Color operator+(in Color c0, in Color c1) { Color ret = new Color(); tsColor_add(ref ret, in c0, in c1); return ret; }
		public static Color operator-(in Color c0, in Color c1) { Color ret = new Color(); tsColor_sub(ref ret, in c0, in c1); return ret; }
		
		public Color gammaToLinear() { Color ret = new Color(); tsColor_gammaToLinear(ref ret, in this); return ret; }
		public Color linearToGamma() { Color ret = new Color(); tsColor_linearToGamma(ref ret, in this); return ret; }
		
		public Color sRGBtoLinear() { Color ret = new Color(); tsColor_sRGBtoLinear(ref ret, in this); return ret; }
		public Color linearToSRGB() { Color ret = new Color(); tsColor_linearToSRGB(ref ret, in this); return ret; }
		
		public void setRGBAu8(uint color) { tsColor_setRGBAu8(ref this, color); }
		public uint getRGBAu8() { return tsColor_getRGBAu8(in this); }
		
		public void setBGRAu8(uint color) { tsColor_setBGRAu8(ref this, color); }
		public uint getBGRAu8() { return tsColor_getBGRAu8(in this); }
		
		public void setABGRu8(uint color) { tsColor_setABGRu8(ref this, color); }
		public uint getABGRu8() { return tsColor_getABGRu8(in this); }
		
		public static Color html(string src) { Color ret = new Color(); tsColor_html(ref ret, src); return ret; }
		public static Color hsv(float h, float s, float v) { Color ret = new Color(); tsColor_hsv(ref ret, h, s, v); return ret; }
		public static Color temperature(float t) { Color ret = new Color(); tsColor_temperature(ref ret, t); return ret; }
		
		public static Color min(in Color c0, in Color c1) { Color ret = new Color(); tsColor_min(ref ret, in c0, in c1); return ret; }
		public static Color max(in Color c0, in Color c1) { Color ret = new Color(); tsColor_max(ref ret, in c0, in c1); return ret; }
		
		public Color clamp(in Color c0, in Color c1) { Color ret = new Color(); tsColor_clamp(ref ret, in this, in c0, in c1); return ret; }
		public Color saturate() { Color ret = new Color(); tsColor_saturate(ref ret, in this); return ret; }
		
		public static Color lerp(in Color c0, in Color c1, float k) { Color ret = new Color(); tsColor_lerp(ref ret, in c0, in c1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2} {3})", r, g, b, a); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsColor_gammaToLinear(ref Color ret, in Color c);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_linearToGamma(ref Color ret, in Color c);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_sRGBtoLinear(ref Color ret, in Color c);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_linearToSRGB(ref Color ret, in Color c);
		[DllImport(Base.Import)] private static extern void tsColor_setRGBAu8(ref Color c, uint color);
		[DllImport(Base.Import)] private static extern uint tsColor_getRGBAu8(in Color c);
		[DllImport(Base.Import)] private static extern void tsColor_setBGRAu8(ref Color c, uint color);
		[DllImport(Base.Import)] private static extern uint tsColor_getBGRAu8(in Color c);
		[DllImport(Base.Import)] private static extern void tsColor_setABGRu8(ref Color c, uint color);
		[DllImport(Base.Import)] private static extern uint tsColor_getABGRu8(in Color c);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_html(ref Color ret, string src);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_hsv(ref Color ret, float h, float s, float v);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_temperature(ref Color ret, float t);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_mul1(ref Color ret, in Color c0, float c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_div1(ref Color ret, in Color c0, float c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_add1(ref Color ret, in Color c0, float c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_sub1(ref Color ret, in Color c0, float c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_mul(ref Color ret, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_div(ref Color ret, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_add(ref Color ret, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_sub(ref Color ret, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_min(ref Color ret, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_max(ref Color ret, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_clamp(ref Color ret, in Color c, in Color c0, in Color c1);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_saturate(ref Color ret, in Color c);
		[DllImport(Base.Import)] private static extern IntPtr tsColor_lerp(ref Color ret, in Color c0, in Color c1, float k);
		
		public static readonly Color zero = new Color(0.0f, 0.0f, 0.0f, 0.0f);
		public static readonly Color black = new Color(0.0f, 0.0f, 0.0f, 1.0f);
		public static readonly Color white = new Color(1.0f, 1.0f, 1.0f, 1.0f);
		public static readonly Color gray = new Color(0.5f, 0.5f, 0.5f, 1.0f);
